--- a/index.htm
+++ b/index.htm
@@ -16,22 +16,22 @@
         <th>Grades (%)</th>
         <th id="weightHeader">Weight (%)</th>
     </tr>
-    <tr>
+    <tr id="homework">
         <th>Homework</th>
         <td><input id="homeworkGrades" value="85"></td>
         <td><input id="homeworkWeight" value="10"></td>
     </tr>
-    <tr>
+    <tr id="quizzes">
         <th>Quizzes</th>
         <td><input id="quizGrades" value="85"></td>
         <td><input id="quizWeight" value="20"></td>
     </tr>
-    <tr>
+    <tr id="tests">
         <th>Tests</th>
         <td><input id="testGrades" value="85"></td>
         <td><input id="testWeight" value="30"></td>
     </tr>
-    <tr>
+    <tr id="midterm">
         <th>Midterm</th>
         <td><input id="midtermGrade" value="85"></td>
         <td><input id="midtermWeight" value="40"></td>
